--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,3 +5,10 @@ data_ingestion:
   source_URL : https://github.com/sahilraj87083/Text-Summarizer-/raw/refs/heads/main/summarizer-data.zip
   local_data_file : artifacts/data_ingestion/data.zip
   unzip_dir : artifacts/data
+
+
+
+data_validation:
+  root_dir : artifacts/data_validation
+  STATUS_FILE : artifacts/data_validation/status.txt
+  ALL_REQUIRED_FILES : ['train','test','validation']
